--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>宁欣垃圾！！！哈哈啊哈哈哈嗝哈哈哈哈</title>
+    <title>洗澡小分队</title>
 </head>
 <body>
+<img src="QQ图片20180310125636.gif"/>
 <h1>“嘤嘤嘤”</h1>
-<p>确认过眼神，</p>
-<p>是不想理的人，</p>
+<p>老铁2点洗澡</p>
 </body>
 </html>
