--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>洗澡小分队</title>
+    <title>宁欣sb</title>
 </head>
 <body>
 <img src="QQ图片20180310125636.gif"/>
