--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>宁欣sb</title>
+    <title>宁欣sb啊  ，哈哈哈哈嗝哈哈</title>
 </head>
 <body>
 <img src="QQ图片20180310125636.gif"/>
 
 <h1>“嘤嘤嘤”</h1>
-<p>老铁2点洗澡</p>
+<p>确认过眼神，</p>
+<p>是不想理的人，</p>
 </body>
 </html>
