--- a/001Basics/index.html
+++ b/001Basics/index.html
@@ -5,8 +5,8 @@
     <title>宁欣sb啊  ，哈哈哈哈嗝哈哈</title>
 </head>
 <body>
-<img src="QQ图片20180310125636.gif"/>
-
+<img src="0.gif"/>
+<img src="1.jpg"/>
 <h1>“嘤嘤嘤”</h1>
 <p>确认过眼神，</p>
 <p>是不想理的人，</p>
