--- a/001Basics/text..html
+++ b/001Basics/text..html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>宁欣sb啊  ，哈哈哈哈嗝哈哈</title>
+</head>
+<body>
+<img src="0.gif"/>
+<img src="1.jpg"/>
+<h1>“嘤嘤嘤”</h1>
+<p>确认过眼神，</p>
+<p>是不想理的人，</p>
+</body>
+</html>
