--- a/001Basics/text..html
+++ b/001Basics/text..html
@@ -6,8 +6,8 @@
     <title>宁欣sb啊  ，哈哈哈哈嗝哈哈</title>
 </head>
 <body>
-<img src="0.gif"/>
-<img src="1.jpg"/>
+<img src="./img/0.gif"/>
+<img src="./img/1.jpg"/>
 <h1>“嘤嘤嘤”</h1>
 <p>确认过眼神，</p>
 <p>是不想理的人，</p>
