--- a/001Basics/text.html
+++ b/001Basics/text.html
@@ -4,10 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>宁欣sb啊  ，哈哈哈哈嗝哈哈</title>
+    <style type="text/css">
+         body{
+             background-image: url("./img/1.jpg");
+             background-size: 100% 100%;
+             height: 100%;
+
+         }
+         html{
+             height: 100%;
+         }
+    </style>
 </head>
 <body>
-<img src="./img/0.gif"/>
-<img src="./img/1.jpg"/>
+
+<img src=/>
 <h1>“嘤嘤嘤”</h1>
 <p>确认过眼神，</p>
 <p>是不想理的人，</p>
