--- a/001Basics/text.html
+++ b/001Basics/text.html
@@ -17,10 +17,8 @@
     </style>
 </head>
 <body>
-
-<img src=/>
 <h1>“嘤嘤嘤”</h1>
-<p>确认过眼神，kjll?</p>
+<p>确认过眼神，kjll//?</p>
 <p>是不想理的人，</p>
 </body>
 </html>
