--- a/001Basics/text.html
+++ b/001Basics/text.html
@@ -5,20 +5,25 @@
     <meta charset="UTF-8">
     <title>宁欣sb啊  ，哈哈哈哈嗝哈哈</title>
     <style type="text/css">
-         body{
-             background-image: url("./img/1.jpg");
-             background-size: 100% 100%;
-             height: 100%;
+        body{
+            background-image: url("./img/1.jpg");
+            background-size: 100% 100%;
+            height: 100%;
+        }
+        html {
+            height: 100%;
+        }
+        @keyframes myfirst {
+            from {opacity:0;}
+            to {opacity:100;}
+        }
+        h1,p{
+            animation: myfirst 5s infinite;
+        }
 
-         }
-         html{
-             height: 100%;
-         }
     </style>
 </head>
 <body>
-
-<img src=/>
 <h1>“嘤嘤嘤”</h1>
 <p>确认过眼神，</p>
 <p>是不想理的人，</p>
