--- a/001Basics/text.html
+++ b/001Basics/text.html
@@ -6,19 +6,27 @@
     <title>宁欣sb啊  ，哈哈哈哈嗝哈哈</title>
     <style type="text/css">
         body{
-            background-image: url("./img/1.jpg");
-            background-size: 100% 100%;
-            height: 100%;
+            background-image: url("./img/2.jpg");
+            background-size: 50% 100%;
 
         }
-        html{
+        html {
             height: 100%;
+            width:200%;
         }
+        @keyframes myfirst {
+            from {opacity:0;}
+            to {opacity:100;}
+        }
+        h1,p{
+            animation: myfirst 5s infinite;
+        }
+
     </style>
 </head>
 <body>
 <h1>“嘤嘤嘤”</h1>
-<p>确认过眼神，kjll//?</p>
+<p>确认过眼神，</p>
 <p>是不想理的人，</p>
 </body>
 </html>
