--- a/001Basics/index.html
+++ b/001Basics/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>洗澡小分队</title>
-    <style type="index/css">
+    <style type="text/css">
         body{
             background-image: url("./img/7.gif");
-            background-size: 50% 50%;
+            background-size: 100% 100%;
             height: 100%;
         }
         html {
