--- a/001Basics/text.html
+++ b/001Basics/text.html
@@ -23,8 +23,10 @@
     </style>
 </head>
 <body>
+<audio src="bgm/Here We Are Again .wav"  autoplay="autoplay">
+</audio>
 <h1>“嘤嘤嘤”</h1>
 <p>确认过眼神，</p>
-<p>是不想理的人，</p>
+<p>遇上对的人，</p>
 </body>
 </html>
