--- a/001Basics/text.html
+++ b/001Basics/text.html
@@ -23,7 +23,8 @@
     </style>
 </head>
 <body>
-<audio src="bgm/bgm.wav"   autoplay="autoplay">
+<audio src="bgm/bgm.wav"  controls="controls"   autoplay="autoplay">
+
 </audio>
 <h1>“嘤嘤嘤”</h1>
 <p>确认过眼神，</p>
