--- a/001Basics/index.html
+++ b/001Basics/index.html
@@ -23,6 +23,8 @@
     </style>
 </head>
 <body>
+<audio src="bgm/Track8.wav" controls="controls"  autoplay="autoplay" >
+</audio>
 <h1>老铁，2点了</h1>
 </body>
 </html>
