--- a/001Basics/index.html
+++ b/001Basics/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-<audio src="bgm/Track8.wav" controls="controls"  autoplay="autoplay" >
+<audio src="bgm/Track8.ogg"  controls="controls" autoplay="autoplay">
 </audio>
 <h1>老铁，2点了</h1>
 </body>
