--- a/001Basics/text.html
+++ b/001Basics/text.html
@@ -23,7 +23,9 @@
     </style>
 </head>
 <body>
-<audio src="bgm/bgm.ogg" controls="controls" autoplay="autoplay">
+<audio  controls="controls" autoplay="autoplay">
+<source src="bgm/bgm.mpeg" type="audio/mpeg"/>
+   Your browser does not support the audio element.
 </audio>
 <h1>“嘤嘤嘤”</h1>
 <p>确认过眼神，</p>
