--- a/001Basics/index.html
+++ b/001Basics/index.html
@@ -23,7 +23,9 @@
     </style>
 </head>
 <body>
-<audio src="bgm/Track8.ogg"  controls="controls" autoplay="autoplay">
+<audio  controls="controls" autoplay="autoplay">
+    <source src="bgm/Track8.mepg" type="audio/mpeg"/>
+    Your browser does not support the audio element.
 </audio>
 <h1>老铁，2点了</h1>
 </body>
